Fixes some spacing issues

--- a/style.styl
+++ b/style.styl
@@ -118,10 +118,10 @@ h2
     border-top: .5px solid #b4b4b4
 
     .container
-      left-padding = 31px
+      left-padding = 29px
       width: (module-width * .33) - left-padding - 5 !important
       display: inline-block
-      font-size: 20px
+      font-size: 18px
       color: #464646
       margin-top: 12px
       padding-left: left-padding
